k8/k8_dev/client-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-client
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging

spec:
  rules:
    - host: ssemail.staging
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
  tls:
    - hosts:
        - ssemail.staging
      secretName: letsencrypt-staging-tls
