k8/k8_dev/server-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-server
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /get$1
spec:
  rules:
    - host: ssemail.staging
      http:
        paths:
          - path: /api/get(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
  tls: # < placing a host in the TLS config will indicate a cert should be created
    - hosts:
        - ssemail.staging
      secretName: letsencrypt-staging-tls
